--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "js-cookie": "3.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "4.3.1",
     "react-router-dom": "5.3.0",
     "react-slick": "0.28.1",
+    "slick-carousel": "1.8.1",
     "styled-components": "5.3.1",
     "typeface-hk-grotesk": "1.0.0"
   },
