--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
+    "date-fns": "2.25.0",
     "js-cookie": "3.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.3.1",
+    "react-loader-spinner": "4.0.0",
     "react-paginate": "7.1.3",
     "react-router-dom": "5.3.0",
     "react-slick": "0.28.1",
