--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "react-dom": "17.0.1",
     "react-icons": "4.3.1",
     "react-loader-spinner": "4.0.0",
-    "react-paginate": "7.1.3",
     "react-router-dom": "5.3.0",
     "react-slick": "0.28.1",
     "slick-carousel": "1.8.1",
-    "styled-components": "5.3.1",
-    "typeface-hk-grotesk": "1.0.0"
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
